- Implemented a way for users to choose which field they want to gather (stump/pinetree for now)
- Fixed bugs regarding movement and executing path files

7/1/23
- Fixed pinetree pathing
- Code now loops
- Added option to which direction to turn the camera before gathering and how many times. Directions include left, right and none
- Added option to walk/reset back to hive after gathering
- Added walking back to hive paths for stump and pine tree
- Added whirligig option. If the whirligig does not activate, the code will default to walking back to hive
- Added paths for mountaintop, pumpkin, cactus and pineapple fields
- Added stump snail kill option. Will afk until stump snail is killed before continuing
- Decreased the size of area detection for hives. This should hopefully reduce the number of false-positives
- Added discord webhook support

8/1/23
- Fixed bugs regarding whirligig
- Added a GUI


9/1/23
- Added bamboo,blue flower, dandelion and mushroom field pathing
- Added bug runs
- bug fixes

10/1/23
- Added clover,pepper and coconut field pathing
- ctrl c is another, better way to stop the macro
- Edits to the overall flow of the loop so that bug runs wont just loop with the same few mobs
- Decreased looting time for bug runs

11/1/23
 - Forgot to update the image assets, leading to an error. Fixed now
 - Added collection for wealth clock, blueberry dispenser, strawberry dispenser, royal jelly dispenser

13/1/23
- Another bug fix
- Fixed paths for pine tree, pumpkin and cactus

14/1/23
-QOL changes to the GUI 
- Improved walk back to hive path for strawberry
- You can now change the resolution through the GUI instead of the save.txt file
- Option to send screenshots of the game to the user via discord webhook

15/1/23
- Fixed bug regarding squares gathering pattern
- Implemented multi-processing, leading to a Reduction in pause times between gather pattern
- disconnect check
- rejoin convert method
- Added treat dispenser