@@ -15,18 +15,25 @@ def apu(k):
         osascript -e  'tell application "System Events" to key up "{}"'
     """.format(k)
     os.system(cmd)
-
+    
+move.press(",")
+move.press(",")
+time.sleep(0.2)
 move.press("e")
-apd("a")
+pag.keyDown("w")
 time.sleep(1.15)
 move.press("space")
 move.press("space")
-time.sleep(1)
-apd("s")
-time.sleep(1.4)
-apu("s")
+time.sleep(2.5)
+move.press(",")
+move.press(",")
+time.sleep(0.75)
 time.sleep(0.02)
-apu("a")
 move.press("space")
-time.sleep(0.5)
+pag.keyUp("w")
+move.press(".")
+move.press(".")
+move.press(".")
+move.press(".")
+time.sleep(0.2)
     
