@@ -16,16 +16,23 @@ def apu(k):
     """.format(k)
     os.system(cmd)
 
+move.press(",")
+move.press(",")
+time.sleep(0.2)
 move.press("e")
-apd("a")
+pag.keyDown("w")
 time.sleep(1.15)
 move.press("space")
 move.press("space")
-time.sleep(1)
-apd("s")
-time.sleep(0.7)
-apu("s")
-time.sleep(2.8)
-apu("a")
+time.sleep(2.5)
+move.press(",")
+move.press(",")
+move.press(".")
+move.press(".")
+time.sleep(1.6)
 move.press("space")
+pag.keyUp("w")
+move.press(".")
+move.press(".")
+time.sleep(0.2)
     
